# crdt_tests

./: CMakeLists.txt  test2.cpp
bench/: CMakeLists.txt  README.md  v0_jpaper.cpp  v1_jpaper.cpp  v2_jpaper.cpp  v3_jpaper.cpp
prototyping/: CMakeLists.txt  test1.cpp
res/: paper.md
version0/: CMakeLists.txt  list.hpp  test1.cpp  test2.cpp  text_document.hpp
version0/crdt/: list.hpp  text_document.hpp
version0/green_crdt/v0/: list.hpp  text_document.hpp
version1/: CMakeLists.txt  test1.cpp
version1/green_crdt/v1/: list.hpp
version2/: CMakeLists.txt  test1.cpp
version2/green_crdt/v2/: list.hpp
version3/: CMakeLists.txt
version3/green_crdt/v3/: list.hpp
version4/: CMakeLists.txt  test1.cpp
version4/green_crdt/v4/: list.hpp
vim_research/: CMakeLists.txt  notes.txt  test1.cpp  test2.cpp
